--- a/booki-starter-code/css/style.css
+++ b/booki-starter-code/css/style.css
@@ -7,6 +7,12 @@
   --main-color: #0065fc;
   --main-bg-color: #f2f2f2;
   --filter-bg-color: #deebff;
+
+  --input-padding: 15px;
+  --margin-hebergement-cards: 7px;
+  --padding-footer-li: 8px 0 8px 0;
+
+  --font-weight-text: 600;
 }
 
 .fa-solid {
@@ -48,13 +54,13 @@ a {
   margin: 0;
   padding: 0;
   height: 80px;
-  width: 25%;
+  width: 20%;
   list-style: none;
 }
 
 .header-navbar_links > li > a:hover {
-  color: #0065fc;
-  border-top: #0065fc solid 2px;
+  color: var(--main-color);
+  border-top: var(--main-color) solid 2px;
   padding-top: 6px;
 }
 /*Navbar --------- */
@@ -79,8 +85,8 @@ a {
 
 /* Icône de localisation*/
 .fa-solid.fa-location-dot {
-  padding: 15px;
-  background-color: #f2f2f2;
+  padding: var(--input-padding);
+  background-color: var(--main-bg-color);
   border-radius: 15px 0 0 15px;
 }
 /* Icône de Recherche*/
@@ -89,19 +95,19 @@ a {
 }
 /* ------------------------*/
 .header-form_input {
-  padding: 15px;
+  padding: var(--input-padding);
   border: none;
 }
 .header-form_input::placeholder {
   color: black;
-  font-weight: 600;
+  font-weight: var(--font-weight-text);
   font-size: 1.2em;
 }
 .header-form_label {
-  background-color: #0065fc;
+  background-color: var(--main-color);
   color: white;
   border-radius: 0 15px 15px 0;
-  padding: 15px;
+  padding: var(--input-padding);
 }
 /* header-Form --------- */
 
@@ -109,7 +115,7 @@ a {
 .header-filtres {
   display: flex;
   list-style: none;
-  font-weight: 600;
+  font-weight: var(--font-weight-text);
   padding-inline-start: 0;
 }
 .header-filtres_title {
@@ -118,12 +124,12 @@ a {
 .header-filtres_all {
   padding: 15px;
   margin-left: 10px;
-  border: solid 1px #f2f2f2;
+  border: solid 1px var(--main-bg-color);
   border-radius: 25px;
 }
 
 .header-filtres_all:hover {
-  background-color: #deebff;
+  background-color: var(--filter-bg-color);
 }
 
 /*Icône des Filtres */
@@ -147,7 +153,7 @@ a {
 }
 
 .fa-solid.fa-info {
-  border: solid 1px #deebff;
+  border: solid 1px var(--filter-bg-color);
   padding: 5px 10px;
   border-radius: 50px;
   margin: 0 10px 0 10px;
@@ -161,6 +167,58 @@ a {
 /* Fin du Header */
 
 /* Début du Main */
+/****** Hebergements ***********/
+#hebergements {
+  width: 62%;
+  padding: 20px;
+}
+
+.hebergements-cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.hebergements-cards_unit {
+  overflow: hidden;
+  background-color: white;
+  border-radius: 15px;
+  height: 200px;
+  width: 30%;
+  padding: 3px;
+}
+.hebergements-cards_unit > img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+  object-position: center;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+.hebergements-cards_unit > h3 {
+  font-size: 1em;
+  font-weight: var(--font-weight-text);
+  margin: var(--margin-hebergement-cards);
+}
+.hebergements-cards_unit > p {
+  font-size: 0.9em;
+  margin: var(--margin-hebergement-cards);
+}
+.card-rating {
+  margin-left: var(--margin-hebergement-cards);
+}
+
+.hebergements-cards_afficherplus {
+  display: block;
+  font-size: 1em;
+  font-weight: var(--font-weight-text);
+  margin-top: 20px;
+
+}
+/* Fin de Hébergement à Marseille */
+
 .section-title {
   margin: 0;
   font-size: 22px;
@@ -193,6 +251,7 @@ a {
 .hebergements-and-populaires {
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
 }
 
 .hebergements-and-populaires section {
@@ -200,11 +259,6 @@ a {
   border-radius: 20px;
   padding: 30px;
   box-sizing: border-box;
-}
-
-/****** Hebergements ***********/
-.hebergements {
-  width: 65%;
 }
 
 /****** Populaires ***********/
@@ -251,6 +305,68 @@ a {
 .populaires-cards .card-rating {
   margin-bottom: 5px;
 }
+
+
+/* Section Activités à Marseille */
+#activites{
+  width: 100%;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.activites-allcards{
+  display: flex;
+  gap: 50px;
+
+
+}
+
+.activites-cards{
+  display: block;
+  height: 500px;
+  width: 25%;
+  border-radius: 20px;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.20);
+  
+}
+
+.activites-cards > img{
+  object-fit: cover;
+  width: 100%;
+  height: 85%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.activites-cards > h3{
+  padding-left: 20px; 
+}
+/* Section Activités à Marseille */
+
+/* ----------- Footer */
+
+#footer{
+  display: flex;
+  width: 100%;
+  list-style: none;
+  background-color: var(--main-bg-color);
+  gap: 250px;
+}
+
+.footer-title{
+  font-weight: var(--font-weight-text);
+}
+
+.footer-list{
+  padding-left: 20px;
+  list-style: none;
+}
+
+.footer-list > li{
+  padding: var(--padding-footer-li);
+}
+
+/* -----------Fin Footer */
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
