--- a/booki-starter-code/css/style.css
+++ b/booki-starter-code/css/style.css
@@ -42,8 +42,7 @@ a {
 }
 
 .header-navbar_logo {
-  width: 10%;
-  height: 10%;
+  width: 70px;
   align-self: center;
 }
 
@@ -51,8 +50,9 @@ a {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  margin: 0;
+  margin: 0 30px 0 0;
   padding: 0;
+  gap: 50px;
   height: 80px;
   width: 20%;
   list-style: none;
@@ -215,7 +215,6 @@ a {
   font-size: 1em;
   font-weight: var(--font-weight-text);
   margin-top: 20px;
-
 }
 /* Fin de Hébergement à Marseille */
 
@@ -306,31 +305,27 @@ a {
   margin-bottom: 5px;
 }
 
-
 /* Section Activités à Marseille */
-#activites{
+#activites {
   width: 100%;
   margin-top: 80px;
   margin-bottom: 80px;
 }
 
-.activites-allcards{
+.activites-allcards {
   display: flex;
   gap: 50px;
-
-
 }
 
-.activites-cards{
+.activites-cards {
   display: block;
   height: 500px;
   width: 25%;
   border-radius: 20px;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.20);
-  
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
 }
 
-.activites-cards > img{
+.activites-cards > img {
   object-fit: cover;
   width: 100%;
   height: 85%;
@@ -338,14 +333,14 @@ a {
   border-top-right-radius: 20px;
 }
 
-.activites-cards > h3{
-  padding-left: 20px; 
+.activites-cards > h3 {
+  padding-left: 20px;
 }
 /* Section Activités à Marseille */
 
 /* ----------- Footer */
 
-#footer{
+#footer {
   display: flex;
   width: 100%;
   list-style: none;
@@ -353,16 +348,16 @@ a {
   gap: 250px;
 }
 
-.footer-title{
+.footer-title {
   font-weight: var(--font-weight-text);
 }
 
-.footer-list{
+.footer-list {
   padding-left: 20px;
   list-style: none;
 }
 
-.footer-list > li{
+.footer-list > li {
   padding: var(--padding-footer-li);
 }
 
@@ -373,11 +368,30 @@ a {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
+  .main-container {
+    max-width: 1440px;
+    min-width: 320px;
+  }
+
+  /*Header Filtres ----------*/
+  .header-filtres {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .header-filtres_all {
+    margin: 0 15px 0 0;
+  }
+  .header-filtres_title {
+    flex-basis: 100%;
+  }
+  /*Header Filtres ----------*/
+
+  /*Hebergement a Marseille ----------*/
   .hebergements-and-populaires {
     flex-direction: column;
   }
 
-  .hebergements {
+  #hebergements {
     width: 100%;
   }
 
@@ -403,9 +417,34 @@ a {
   .populaires-cards .card-subtitle {
     font-size: 13px;
   }
+
+  /*Section Activités à Marseille */
+  .activites-allcards {
+    gap: 20px;
+  }
+  .activites-cards {
+    height: 250px;
+  }
+  .activites-cards > img {
+    height: 75%;
+  }
+  .activites-cards > h3 {
+    font-size: 0.8em;
+    padding-right: 10px;
+    align-content: center;
+    justify-content: flex-start;
+  }
+  /*Section Activités à Marseille */
+
+  #footer {
+    gap: 90px;
+  }
 }
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) {
   /* ... */
+  .main-container {
+    color: purple;
+  }
 }
